--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,8 @@ select{
   text-transform: capitalize;
   font-size: 15px;
 }
+/*loading screen*/
+/*--------------*/
 /*navigation section*/
 /*------------------*/
 nav{
@@ -543,11 +545,73 @@ main .home-page .card-box .info-card:hover{
 input[class*='safety-btn']{
   background-color: var(--warning);
 }
+/*translation width*/
+/*-----------------*/
 font{
   width: 100%;
 }
 font input{
   width: 100%;
+}
+/*Error page*//*About us page*/
+/*---------------------------*/
+main .error-page,main .about-page{
+  flex: 1;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.error-page  h1,.error-page h3,.error-page a,
+.about-page h1,.about-page a{
+  text-transform: uppercase;
+}
+.error-page h1,.about-page h1{
+  color: var(--secondary-1-color);
+  font-size: 10rem;
+  text-align: center;
+  text-shadow: 5px 5px 5px rgba(226, 215, 132,.4);
+}
+.about-page h1{
+  font-size: 5rem;
+}
+.error-page h3{
+  color: var(--secondary-2-color);
+  font-size: 2rem;
+  text-align: center;
+}
+.error-page p,.about-page p{
+  text-align: center;
+  font-size: 1.1rem;
+  color: var(--secondary-3-color);
+}
+.error-page .error-btn-option,.about-page .about-btn-option{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 15px;
+  justify-content: center;
+  align-items: center;
+}
+.error-page a,.about-page a{
+  border-radius: 10px;
+  border: 2px solid var(--secondary-2-color);
+  padding: 10px 20px;
+  font-weight: 500;
+  transition: all .2s ease-in;
+}
+.error-page a:first-of-type,.about-page a:first-of-type{
+  background-color: var(--secondary-2-color);
+  color: var(--primary-color);
+}
+.error-page a:last-of-type,main .about-page a:last-of-type{
+  background-color: var(--primary-color);
+  color: var(--secondary-2-color);
+}
+.error-page a:hover,.about-page a:hover{
+  letter-spacing: 1px;
 }
 /*footer section*/
 /*--------------*/
