--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,46 @@ select{
 }
 /*loading screen*/
 /*--------------*/
+/*Skeleton card*/
+/*-------------*/
+.skeleton-img{
+  width: 100%;
+  height: 330px;
+  border-radius: 10px;
+  opacity: .6;
+  animation: skeleton 1s linear infinite alternate;
+}
+.skeleton-card .info-card{
+  background-color: rgba(0, 0, 0, .2) !important;
+}
+.skeleton-card h1,.skeleton-card h3,.skeleton-card h4{
+  border-radius: 10px;
+  opacity: .6;
+  margin-bottom: 10px;
+  animation: skeleton 1s linear infinite alternate;
+}
+.skeleton-card h1{
+  width: 70%;
+  height: 1.5rem;
+}
+.skeleton-card h3{
+  width: 40%;
+  height: 1rem;
+}
+.skeleton-card h4{
+  width: 20%;
+  height: .75rem;
+}
+.skeleton-card .info-box{
+}
+@keyframes skeleton {
+  0%{
+    background-color:rgba(0, 0, 0, .2) ;
+  }
+  100%{
+    background-color: rgba(0, 0,0,.6);
+  }
+}
 /*navigation section*/
 /*------------------*/
 nav{
