--- a/src/App.css
+++ b/src/App.css
@@ -82,8 +82,6 @@ select{
   width: 20%;
   height: .75rem;
 }
-.skeleton-card .info-box{
-}
 @keyframes skeleton {
   0%{
     background-color:rgba(0, 0, 0, .2) ;
@@ -95,7 +93,7 @@ select{
 /*navigation section*/
 /*------------------*/
 nav{
-  min-height:50px;
+  min-height:55px;
   display: flex;
   justify-content: space-around;
   align-items: stretch;
@@ -117,7 +115,7 @@ nav .nav-link ul{
   align-items: center;
 }
 nav .nav-link ul li{
-  height: 100%;
+  height: 75%;
   width: 25%;
 }
 nav .nav-link a{
@@ -128,12 +126,29 @@ nav .nav-link a{
   align-items: center;
   font-size: 1.1rem;
   font-weight: 400;
+  transition: all .2s ease-in;
+  position: relative;
 }
-nav .nav-link li:last-of-type{
-  background-color: blue;
+nav .nav-link ul li:last-of-type{
+  background-color: var(--secondary-1-color);
+  color: var(--secondary-3-color);
+  border-radius: 10px;
 }
-nav .nav-link ul li a:hover{
-  background-color: var(--secondary-2-color);
+nav .nav-link ul li:last-of-type a:hover,nav .active{
+  background-color: var(--secondary-3-color);
+}
+nav .nav-link ul li a:hover,nav .active{
+  color: var(--secondary-1-color);
+}
+nav .nav-link ul li a:hover::after,nav .active::after {
+  content: '';
+  position: absolute;
+  width: 60%;
+  height: 3px;
+  background-color: var(--secondary-1-color);
+  bottom: 0px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 nav .nav-burger{
   display: none;
