--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,46 @@ select{
 }
 /*loading screen*/
 /*--------------*/
+.loading-container{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, .4);
+  z-index: 3;
+}
+.loading{
+  height: 50px;
+  transform-origin: bottom center;
+  animation :  rotate 2s linear infinite
+}
+.circle{
+  display: inline-block;
+  background-color: var(--secondary-1-color);
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  transform: scale(0);
+  animation: grow 1s linear infinite;
+}
+.circle:nth-child(2){
+  background-color: var(--secondary-3-color);
+  animation-delay: 0.5s;
+}
+@keyframes rotate {
+  to{
+    transform: rotate(360deg);
+  }
+}
+@keyframes grow {
+  50%{
+    transform: scale(1);
+  }
+}
 /*Skeleton card*/
 /*-------------*/
 .skeleton-img{
