--- a/src/App.css
+++ b/src/App.css
@@ -436,7 +436,7 @@ main .home-page .card-container{
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   align-items: flex-start;
   flex-wrap: wrap;
   gap: 40px;
