--- a/src/App.css
+++ b/src/App.css
@@ -1057,3 +1057,45 @@ footer .footer-media-container svg:hover{
 .next-btn{
   right:20px;
 }
+/*pagination*/
+/*----------*/
+.pagination{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.pagination button{
+  height: 100%;
+  background-color: var(--secondary-3-color);
+  letter-spacing: 5px;
+  padding:15px 40px;
+  color: var(--primary-color);
+  border: none;
+  border-radius: 10px;
+  font-size: 1rem;
+}
+.pagination button:disabled{
+  opacity: .6;
+}
+.pagination ul{
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+}
+.pagination ul li{
+  padding: 10px 10px;
+  background-color: var(--secondary-2-color);
+  color: var(--primary-color);
+  font-size: 1rem;
+}
+.pagination ul li.active{
+  background-color: var(--secondary-3-color);
+  color: var(--secondary-1-color);
+}
