--- a/src/App.css
+++ b/src/App.css
@@ -376,12 +376,12 @@ main form .form-checkbox h3{
 /*--------------*/
 main .cards-gallery{
   background-color:var(--primary-color);
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
   bottom: 0;
   left: 0;
-  padding: 20px;
+  overflow-y: auto;
 }
 main .cards-gallery svg{
   position: absolute;
@@ -389,14 +389,13 @@ main .cards-gallery svg{
   right: 20px;
 }
 main .cards-gallery .cards-container{
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-content:center ;
   gap: 20px;
   flex-wrap: wrap;
+  padding: 20px;
 }
 main .cards-gallery .card-space{
   background-color: var(--secondary-2-color);
