--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
   --secondary-1-color:#E2D784;/*rgb(226, 215, 132)*/
   --secondary-2-color:#05595B;/*rgb(5, 89, 91)*/
   --secondary-3-color:#062C30;/*rgb(6, 44, 48)*/
-  --success:#339900;	/*(51,153,0)*/
-  --success-hover:#00b300;	/*(0,179,0)*/
+  --success:#00b300;	/*(51,153,0)*/
+  --success-hover:#339900;	/*(0,179,0)*/
   --info:#0080ff;
   --info-hover:#003f9a;	/*(0,63,154)*/
   --warning:#efcc00;
@@ -1168,15 +1168,57 @@ footer .footer-media-container svg:hover{
   align-items: center;
   gap: 10px;
   color: var(--primary-color);
-  background-color: var(--secondary-2-color);
   padding:10px;
   border-radius: 10px;
   flex: 1;
+  position: relative;
+  text-align: center;
+}
+.model-svg li.succ-btn{
+  background-color: var(--success);
+}
+.model-svg li.succ-btn:hover{
+  background-color: var(--success-hover);
+}
+.model-svg li.cancel-btn{
+  background-color: var(--info);
+}
+.model-svg li.cancel-btn:hover{
+  background-color: var(--info-hover);
+}
+.model-svg li.warn-btn{
+  background-color: var(--error);
+}
+.model-svg li.warn-btn:hover{
+  background-color: var(--error-hover);
 }
 .model-svg li:hover{
   cursor: pointer;
-  background-color: var(--secondary-3-color);
 }
 .model-svg li svg{
   fill: var(--primary-color);
+}
+/*tooltip*/
+/*-------*/
+.model-svg li::before,
+.model-svg li::after{
+  --scale:0;
+  position: absolute;
+  left: 50%;
+  top: -.25rem;
+  transform: translateX(-50%) translateY(-100%) scale(var(--scale)); 
+  transition: 150ms transform;
+}
+.model-svg li::before{
+  content: attr(data-tooltip);
+  color: var(--primary-color);
+  padding: .5rem;
+  border-radius: .3rem;
+  text-align: center;
+  width:max-content ;
+  max-width: 100%;
+  background-color: inherit;
+}
+.model-svg li:hover::before{
+  --scale:1
 }
