--- a/src/App.css
+++ b/src/App.css
@@ -186,7 +186,7 @@ nav .nav-link ul li{
   width: 25%;
 }
 nav .nav-link a{
-  height: 100%;
+  height:100%;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -202,9 +202,7 @@ nav .nav-link ul li:last-of-type{
   border-radius: 10px;
 }
 nav .nav-link ul li:last-of-type a{
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  text-align: center;
 }
 nav .nav-link ul li:last-of-type a:hover,nav .active{
   background-color: var(--secondary-3-color);
@@ -260,6 +258,20 @@ nav .nav-burger svg{
   }
   nav .nav-mobile{
     display: none;
+  }
+  nav .nav-link ul li:last-of-type{
+    border-radius: 0;
+  }
+  nav .nav-link ul li a:hover::after,nav .active::after {
+    all: unset;  
+  }
+  nav .nav-link ul li a:hover,nav .active{
+    background-color: var(--secondary-2-color);
+    color: var(--primary-color);
+  }  
+  nav .nav-link ul li a:hover{
+    background-color: var(--secondary-2-color) !important;
+    color: var(--primary-color);
   }
 }
 /*main section*/
@@ -816,15 +828,12 @@ footer .footer-media-container svg:hover{
   left: 0;
   right: 0;
   background-color: rgba(0, 0,0,.4);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px 0;
+  padding: 20px;
+  overflow-y: auto;
 }
 .model-container{
-  position: relative;
+  margin: auto;
   width: 400px;
-  min-height: 200px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -833,11 +842,6 @@ footer .footer-media-container svg:hover{
   gap: 10px;
   padding:40px 20px;
   background-color: var(--primary-color);
-}
-.model-container > svg{
-  position: absolute;
-  top: 10px;
-  right: 10px;
 }
 /*photo model*/
 .model-container input[type='file']{
