--- a/src/App.css
+++ b/src/App.css
@@ -398,7 +398,8 @@ form .form-input input:invalid[focused="true"]{
 form .form-input input:invalid[focused="true"] ~ span{
   display: block;
 }
-main form .db-warning{
+main form .db-warning,
+.email-form span{
   color: red;
 }
 main form .form-checkbox{
